# image2verse

./: .gitignore  README.md  app.py  langgraph.json  pyproject.toml  requirements.txt
data/lyrics/: song_lyrics_radiohead.csv  song_lyrics_the_strokes.csv
notebook/: downsize.ipynb  exploration.ipynb  ingestion.ipynb
prod_rag/: config.py  main.py  prompts.py  vectorstore.py
prod_rag/agents/: default.py  local_gemma4.py
prod_rag/agents/tools/: __init__.py  query_syllabus.py
prod_rag/api/: server.py
prod_rag/api/routers/: __init__.py  chat.py  retrieval.py
prod_rag/api/services/: query_lyrics.py
prod_rag/gradio/: app.py
prod_rag/mcp/: server.py
prod_rag/tools/: __init__.py  query_lyrics.py
