[project]
name = "prod-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=0.1.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured[local]>=1.0.1",
    "langgraph-cli[inmem]>=0.4.30",
    "pydantic-settings>=2.14.1",
    "sentence-transformers>=5.6.0",
    "unstructured[all-docs]>=0.23.1",
]
