[project]
name = "prod-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.104.0",
    "docling-core>=2.83.1",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=0.1.2",
    "langchain-docling>=2.0.0",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured[local]>=1.0.1",
    "langchain-weaviate>=0.0.7",
    "langgraph-cli[inmem]>=0.4.30",
    "polars>=1.41.2",
    "pydantic-settings>=2.14.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "unstructured[all-docs]>=0.23.1",
]
