[project]
name = "prod-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "fastmcp>=3.4.2",
    "gradio>=6.19.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-chroma>=0.1.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph-cli[inmem]>=0.4.30",
    "polars>=1.41.2",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
]
